reflect review comments